testdata/bad/blob_6.ion
{{ YSBiIGMgZCBlIGYgZyBoIGkgaiBrI.GwgbSBuIG8gcCBxIHIgcyB0IHUgdiB3IHggeSB6 }}
